# Monarch

./: .claudeignore  .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  README.md  docker-compose.infra.yml  docker-compose.yml  go.work  go.work.sum  nx.json  package.json  settings.gradle.kts  tsconfig.base.json
.github/workflows/: ci.yml
apps/gateway/: package.json
apps/gateway/src/: server.ts
docs/architecture/: ADR-001-architecture-decisions.md
docs/reference/: README.md
infrastructure/docker/: go.Dockerfile  java.Dockerfile  node.Dockerfile  python.Dockerfile  rust.Dockerfile
infrastructure/scripts/: create-kafka-topics.sh  init-postgres.sh  keycloak-realm.json
libs/common-go/: go.mod  health.go  tenant.go
libs/common-java/: build.gradle.kts
libs/common-java/src/main/java/com/monarch/common/: AuditLogger.java  TenantContext.java  TenantFilter.java
libs/common-python/: pyproject.toml
libs/common-python/monarch_common/: __init__.py  health.py  tenant.py
libs/common-rust/: Cargo.toml
libs/common-rust/src/: error.rs  health.rs  lib.rs  tenant.rs
libs/db-migrations/: build.gradle.kts
libs/db-migrations/flyway/sql/: V001__create_platform_schema.sql  V002__create_tenant_template.sql  V003__tenant_provisioning_function.sql
libs/event-schemas/: README.md  package.json
libs/event-schemas/avro/: common.avsc  kyc-status-changed.avsc  ledger-posted.avsc  order-event.avsc  policy-decisioned.avsc  recon-break.avsc
services/go/model-portfolio-service/: go.mod
services/go/model-portfolio-service/cmd/: main.go
services/go/portfolio-engine-service/: go.mod
services/go/portfolio-engine-service/cmd/: main.go
services/go/rebalancing-service/: go.mod
services/go/rebalancing-service/cmd/: main.go
services/java/cash-ledger-service/: build.gradle.kts
services/java/cash-ledger-service/src/main/resources/: application.yml
services/java/identity-service/: build.gradle.kts
services/java/identity-service/src/main/resources/: application.yml
services/python/policy-decision-service/: pyproject.toml
services/python/policy-decision-service/app/: main.py  routes.py
services/rust/order-capture-service/: Cargo.toml
services/rust/order-capture-service/src/: main.rs  models.rs
(+4 files in other folders)
