[package]
name = "monarch-common"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
thiserror = "2"
tracing = "0.1"
