[package]
name = "order-capture-service"
version = "0.1.0"
edition = "2021"

[dependencies]
monarch-common = { path = "../../../libs/common-rust" }
actix-web = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
